package com.k.noiseMaker;

object Logger {
	
	def log(o:Any){
		println(o);
	}
  
	def loginline(o:Any){
		print(o);
	}
}
